# vision_system_domains_face_recognition

./: .gitignore  MISSING_RULES.md  PIPELINE_IMPLEMENTATION_SUMMARY.md  README.md  analyze_failed_detection.py  check_images.py  create_test_image.py  debug_detection.py  debug_face_detection.py  debug_onnx_environment.py  models_with_landmarks.md  pyproject.toml  pytest.ini  requirements.txt  test_pipeline.py
.cursor/: README.md
.cursor/rules/: .cursorrules  CROSS_PLATFORM_COMPATIBILITY.mdc  DATA_PIPELINE_GUIDE.md  INTEGRATION_GUIDE.mdc  README.md
common/: README.md  __init__.py  config.py  config_loader.py  file_utils.py  logging.py  utils.py
config/: README.md  __init__.py  defect_detection.yaml  face_recognition.yaml  face_recognition_api.yaml
data/: README.md  STRUCTURE.md
data/domains/: README.md  __init__.py
data/logs/: README.md
data/output/: README.md
data/temp/: README.md
datasets/: README.md  __init__.py
datasets/factory/: __init__.py
datasets/humanoid/: __init__.py
docs/: CROSS_PLATFORM_COMPATIBILITY_RULES.md  HARDWARE_OPTIMIZATION_GUIDE.md  README.md  STRUCTURE.md
docs/guides/: BATCH_PROCESSING_GUIDE.md  C_KEY_CAPTURE_FLOW.md  DATA_FLOW_GUIDE.md  DATA_STRUCTURE_REDESIGN.md  (+7 more)
domains/: README.md  STRUCTURE.md  __init__.py
models/: README.md  STRUCTURE.md  __init__.py
requirements/: README.md  dev.txt  production.txt
scripts/: NAMING_RULES.md  README.md  STRUCTURE.md  __init__.py  advanced_automation.py  continuous_learning.py  create_domain.py  distributed_processing.py  download_face_models.py  download_onnx_models.py  error_recovery.py  manage_traceability.py  monitor_performance.py  run_pipeline.py  setup_file_protection.py  setup_git_hooks.py  test_advanced_automation.py  validate_file_locations.py  validate_filenames.py  validate_pipeline.py  web_dashboard.py
shared/: README.md  STRUCTURE.md  __init__.py
tests/: README.md  __init__.py  test_face_recognition.py  test_shared_vision_core.py
tools/: README.md  STRUCTURE.md
(+292 files in other folders)
